syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message RelicArchive {
	uint32 relic_id = 2;
	uint32 slot = 12;
}